<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">NYT Search</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Enter Search Query</string>
    <string name="search">Search</string>
    <string name="begin_date">Begin Date:</string>
    <string name="sort_order">Sort Order:</string>
    <string name="oldest"/>
    <string name="news_desk_values">News Desk Values:</string>
    <string name="save">Save</string>
    <string name="arts">Arts</string>
    <string name="sports">Sports</string>
    <string name="fashion">Fashion</string>
    <string name="arts1">Arts</string>
    <string name="newsdesk">NEWSDESK</string>
    <string name="seldate">SELDATE</string>
    <string name="sortorder">SORTORDER</string>
    <string name="hintSettings">Press to Select...</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="cancel">Cancel</string>
    <string name ="ARTS">Arts</string>
    <string name ="SPORTS">Sports</string>
    <string name ="FASHION">Fashion</string>
    <string name ="Search">Search</string>
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>,
        <xliff:g id="day">%2$s</xliff:g>
    </string>
    <string name = "networkerror">Oh..Oh..Check your connection. Please try again!</string>
    <string name = "title">The New York Times </string>>

</resources>
