<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_settings"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kennard.nytimesearch.activity.SettingsActivity">


    <TextView
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:text="@string/begin_date"
        android:paddingRight="@dimen/general_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/settings_halfmargin"
        android:layout_marginTop="@dimen/settings_halfmargin"
        android:id="@+id/tvBeginDateLabel"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/hintSettings"
        android:layout_toRightOf="@+id/tvBeginDateLabel"
        android:layout_alignBaseline="@+id/tvBeginDateLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/tvBeginDate"/>

    <TextView
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:text="@string/sort_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBeginDateLabel"
        android:layout_alignLeft="@+id/tvBeginDateLabel"
        android:layout_alignStart="@+id/tvBeginDateLabel"
        android:layout_marginTop="@dimen/settings_margin"
        android:id="@+id/tvSortOrder"/>


    <Spinner
        android:layout_width="wrap_content"
        android:layout_alignBaseline="@id/tvSortOrder"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBeginDateLabel"
        android:layout_alignLeft="@id/tvBeginDate"
        android:layout_alignStart="@+id/tvBeginDate"
        android:id="@+id/spSortOrder"
        android:entries="@array/sort_array"
        android:prompt="@string/hintSettings"
       />


    <TextView
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:text="@string/news_desk_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSortOrder"
        android:layout_alignLeft="@+id/tvSortOrder"
        android:layout_alignStart="@+id/tvSortOrder"
        android:layout_marginTop="42dp"
        android:id="@+id/tvNewsDeskValues"/>


    <CheckBox
        android:layout_marginTop="21dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spSortOrder"
        android:layout_below="@+id/tvNewsDeskValues"
        android:id="@+id/cbArts"
        android:text="@string/arts1"/>

    <CheckBox
        android:text="@string/sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbArts"
        android:layout_alignLeft="@+id/cbArts"
        android:layout_alignStart="@+id/cbArts"
        android:id="@+id/cbSports"/>

    <Button
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbFashion"
        android:layout_marginTop="@dimen/settings_margin"
        android:id="@+id/btnSave"
        android:background="@color/colorAccent"
        android:onClick="onSettingsSave"/>
    <CheckBox
        android:text="@string/fashion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cbFashion"
        android:layout_below="@+id/cbSports" android:layout_alignLeft="@+id/cbSports"
        android:layout_alignStart="@+id/cbSports"/>


</RelativeLayout>
